--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,39 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+:root.theme-dark {
+  --title-color: #DB00FF;
+  --background-color: #000028;
+  --navigagtion-text-color:#FF0070;
+  --nav-outline: 1px solid #FF0070;
+  --accent-color:#FF0070;
+  --accent-text-color:#000028;
+  --subtitle-color:#FF0070;
+  --main-text-color: #F1B2CE;
+
+  --page-image: url("../images/cover-image-dark.png");
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --title-color: #DB00FF;
+    --background-color: #000028;
+    --navigagtion-text-color:#FF0070;
+    --nav-outline: 1px solid #FF0070;
+    --accent-color:#FF0070;
+    --accent-text-color:#000028;
+    --subtitle-color:#FF0070;
+    --main-text-color: #F1B2CE;
+    }
+}
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --title-color: #DB00FF;
+  --background-color: #000028;
+  --navigagtion-text-color:#FF0070;
+  --nav-outline: 1px solid #FF0070;
+  --accent-color:#FF0070;
+  --accent-text-color:#000028;
+  --subtitle-color:#FF0070;
+  --main-text-color: #F1B2CE;
+
+  --page-image: url("../images/cover-image-dark.png");
 }
+
