--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,34 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+:root.theme-light  {
+  --title-color:#FFC2E6;
+  --background-color: #FFF1F7;
+  --navigagtion-text-color:#353430;
+  --nav-outline: 1px solid #353430;
+  --accent-color:#FF8DCB;
+  --accent-text-color:#353430;
+  --subtitle-color:#353430;
+  --main-text-color: #353430;
+  --page-image: url("../images/cover-image-light.png")
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --title-color:#FFC2E6;
+    --background-color: #FFF1F7;
+    --navigagtion-text-color:#353430;
+    --nav-outline: 1px solid #353430;
+    --accent-color:#FF8DCB;
+    --accent-text-color:#353430;
+    --subtitle-color:#353430;
+    --main-text-color: #353430;  
+    --page-image: url("../images/cover-image-light.png")
+    }
+}
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-image: url("../images/cover-image-light.png");
+
+}
+
+.header__theme-menu-button_type_light :hover {
+  outline: 1px solid #353430;
 }
