--- a/styles/style.css
+++ b/styles/style.css
@@ -28,80 +28,145 @@ html {
 
 .header {
   display: grid;
+
   justify-self: space-between;
 width: 100%;
-max-height: 668px;
+min-height: 668px;
+max-height: 768px;
 margin: 0;
 padding: 0;
 }
 
-/*.decoration {
+/*@media (min-width: 1024px) {
+  .header {
+    display: grid;
+    grid-template-areas:
+    "nav" "nav" "rec"
+  }
+
+  .header__theme-menu-list {
+    grid-area: "nav";
+  }
+}*/
+@media (min-width: 1024px) {
+.header__theme-menu {
+  display: grid;
+  grid-template-columns: auto 76px;
+  align-items: center;
+  margin-block-start: 20px;
+}
+
+.header__theme-menu-list {
+  grid-area: 1 / 1 / 2 / 2;
+  text-align: center;
+  min-width: 230px;
+justify-content: center;
+gap: 10px;
+
+}
+
+.decoration {
   display: flex;
   flex-direction: row;
-padding: 0;
-margin: 0;
-margin-block-start: 20px;
-gap: 5px;
-
+  grid-area: 1 / 2 / 2 / 3;
+justify-self: flex-end;
+margin: 0 20px 0 0;
 }
 
-.icon-text {
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: row;
+
+  list-style-type: none;
+margin: 0;
+
+}
+.header__theme-menu-item {
+  width: 70px;
+}
+}
+
+
+
+@media (width< 1024px){
+.decoration {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+padding: 0;
+margin: 20px 20px 0 0;
+gap: 5px;
+
+
+}
+}
+.page.theme_dark .icon-text  {
   display: inline-block;
   color: #FF0070;
- margin: 0 0 0 16.889em;
+margin: 0;
  text-align: end;
  padding: 0;
 
 }
 
-.decorated-zone {
-  border-inline-end: 1px solid #FF0070;
-  border-top: 1px solid #FF0070;
-  border-top-width: 1px;
-  border-right-width: 2px;
-
+.page.theme_light .icon-text {
+display: none;
 }
 
-.icon-top {
-  display: inline-block;
- 
-  margin: 0;
-
-
-  min-width: 1em;
-  min-height: 1em;
-
-  text-align: end;
-}
-
-.icon-top::after {
+.icon-top  {
   display: block;
-  position: absolute;
-  content: 'p';
-  border: 1px solid white;
-width: 9px;
-height: 9px;
-text-align: end;
-} */
-
-.header__theme-menu  {
-  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin: 0;
+  position: relative;
+  border-right: 1px solid #FF0070;
+  border-top: 1px solid #FF0070;
 }
 
+.page.theme_light .icon-top {
+
+  border-right: 1px solid #353430;
+  border-top: 1px solid #353430;
+}
+
+
+
+.page.theme_dark .icon-top::after {
+  content: ""; 
+  position: absolute; 
+  width: 9px; 
+  height: 9px;
+  top: 25%; 
+left: 25%;
+  border-radius: 50%; 
+  background-color: #FF0070; 
+  box-shadow: 0 0 4px 2px #FF0070;
+}
+
+
+
+@media (width <1024px ) {
 .header__theme-menu-list {
   display: flex;
+  align-items: stretch;
   flex-direction: column;
   list-style-type: none;
   text-align: end; 
+gap: 10px;
+margin: 39px 10px 0 0;
 
-margin: 0;
-margin-right: 0.555em;
 padding: 0;
 
+}
 }
 
 
 .header__theme-menu-button{
+  
+  font-family: IBM Plex Mono, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 18px;
+font-weight: 400;
 background-color: transparent;
 color: var(--navigagtion-text-color);
 border: none;
@@ -128,49 +193,80 @@ text-decoration: underline;
 
 .heading-tittle {
 color: var(--title-color);
-font-family: IBM Plex Mono;
+font-family: IBM Plex Mono, Arial, sans-serif; /*дописать*/
 font-weight: 700;
 line-height: 96px;
 text-align: left;
 text-shadow: 4px 4px 0 var(--accent-color);
-margin: 0
-margin-top: 238px;
+margin: 70px 0 55px 10px;
+padding: 0;
+
 }
 
 
 @media (375px <= width < 768px) {
   .heading-tittle   {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  margin: 70px 0 55px 10px;
   }
 }
 
 @media (768px <= width < 1024px) {
   .heading-tittle   {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  margin: 173px 0 162px 0;
   }
 }
 
 @media (min-width: 1024px) {
   .heading-tittle   {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  margin: 273px 0 130px 0;
   }
 }
 
 
 .introduction {
   display: inline-block;
-  width: 365px;
+  width: 355px;
   font-family: IBM Plex Mono, Arial, sans-serif;
   font-weight: 700;
+  line-height: 23.4px;
   background-color: var( --accent-color);
   color: var( --accent-text-color);
-justify-self: end;
-margin-right: 10px;
+  justify-self: end;
+margin: 0 10px 0 0;
+}
+
+@media (min-width: 1024px) {
+  .introduction {
+    width: 491px;
+  height: fit-content;
+  margin-right: 20px;
+  }
+}
+
+.icon-bottom {
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin: 30px 0 0 10px;
+
+  border-left: 1px solid #FF0070;
+  border-bottom: 1px solid #FF0070;
+}
+ 
+.page.theme_light .icon-bottom {
+  border-left: 1px solid #353430;
+  border-bottom: 1px solid #353430;
 }
 
 
 .subtitle {
   color: var(--subtitle-color);
+  font-family: IBM Plex Mono, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
 }
 
 .item-heading {
@@ -194,16 +290,13 @@ margin-right: 10px;
 }
 
 .main {
-  margin: 0;
-margin-left: 10px;
-margin-right: 10px;
-margin-top: 60px;
+  margin: 40px 10px 0 10px;
 }
 
 @media (375px <= width < 768px) {
   .first-block   {
     display: grid;
-    margin: 0 10px 0 10px;
+    margin: 0;
   }
 }
 
@@ -219,7 +312,7 @@ grid-column-gap: 20px;
   
   .first-block .subtitle   {
     grid-row: span 4;
-    margin: 0;
+    margin: 0px;
       }
 }
 
@@ -299,7 +392,7 @@ grid-column-gap: 20px;
 
 .pictures {
   display: grid;
-  margin: 20px 0 0 0;
+  margin: 10px 0 0 0;
   gap: 10px;
 }
 
@@ -336,4 +429,77 @@ grid-column-gap: 20px;
     grid-area: street;
   }
 
+}
+
+.footer {
+  display: flex;
+  width: 100%;
+min-height: 668px;
+  flex-direction: column;
+  margin: 40px 0 0 0;
+  justify-content: space-between;
+}
+
+@media (768px <= width < 1024px) {
+  .footer {
+    min-height: 1024px;
+  }
+}
+
+@media (width >= 1024px) {
+  .footer {
+    min-height: 768px;
+   
+  }
+}
+
+.footer-icon-top  {
+  display: block;
+  width: 25px;
+  height: 25px;
+ 
+  border-right: 1px solid #FF0070;
+  border-top: 1px solid #FF0070;
+  margin: 0 10px 0 auto; 
+}
+
+.footer-icon-bottom {
+  display: block;
+  width: 25px;
+  height: 25px;
+margin-left: 10px;
+
+  border-left: 1px solid #FF0070;
+  border-bottom: 1px solid #FF0070;
+}
+ 
+.footer-title {
+color: var(--title-color);
+font-family: IBM Plex Mono, Arial, sans-serif; /*дописать*/
+font-weight: 700;
+line-height: 96px;
+text-shadow: 4px 4px 0 var(--accent-color);
+width: 100%;
+text-align: center;
+}
+
+@media (375px <= width < 768px) {
+  .footer-title  {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  margin: 70px 0 55px 10px;
+  }
+}
+
+@media (768px <= width < 1024px) {
+  .footer-title  {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  margin: 173px 0 162px 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .footer-title  {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  margin: 273px 0 130px 0;
+  }
 }
