--- a/styles/style.css
+++ b/styles/style.css
@@ -291,7 +291,7 @@ margin: 48px 0 20px 0;
 }
 
 .second-block .subtitle { 
-  margin: 25px 0 20px 0;
+  margin: 50px 0 20px 0;
   }
 
 .third-block .subtitle { 
@@ -307,7 +307,7 @@ margin: 48px 0 20px 0;
   font-size: 18px;
   line-height: 23.4px;
   font-weight: 700;
-  margin: 0 0 8px 0;
+  margin: 10px 0 10px 0;
 }
 
 .last-item-heading {
@@ -319,7 +319,7 @@ margin: 48px 0 20px 0;
 
 .main-text {
   color: var(--main-text-color);
-  margin: 0 0 20px 0;
+  margin: 0 ;
   font-family: IBM Plex Mono, Arial, sans-serif;
   font-size: 18px;
   line-height: 23.4px;
