--- a/styles/style.css
+++ b/styles/style.css
@@ -15,173 +15,148 @@ html {
   line-height: 23.4px;
   margin: 0;
   padding: 0;
-  background-color: var( --background-color); 
+  background-color: var(--background-color);
   background-image: var(--page-image);
   background-repeat: no-repeat;
-  background-size: cover; 
-  background-position: center; 
-  
+  background-size: cover;
+  background-position: center;
 }
-
-
-
-
 
 .header {
   display: grid;
   justify-self: space-between;
 
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-/*@media (min-width: 1024px) {
-  .header {
-    display: grid;
-    grid-template-areas:
-    "nav" "nav" "rec"
+@media (min-width: 1024px) {
+  .header__theme-menu {
+      display: grid;
+      grid-template-columns: auto 26px;
+      align-items: center;
+      margin-block-start: 20px;
   }
 
   .header__theme-menu-list {
-    grid-area: "nav";
+      grid-area: 1 / 1 / 2 / 2;
+      text-align: center;
+      min-width: 230px;
+      justify-content: center;
+      gap: 10px;
   }
-}*/
-@media (min-width: 1024px) {
-.header__theme-menu {
-  display: grid;
-  grid-template-columns: auto 26px;
-  align-items: center;
-  margin-block-start: 20px;
-}
 
-.header__theme-menu-list {
-  grid-area: 1 / 1 / 2 / 2;
-  text-align: center;
-  min-width: 230px;
-justify-content: center;
-gap: 10px;
-
-}
-
-.decoration {
-  display: flex;
-  flex-direction: row;
-  grid-area: 1 / 2 / 2 / 3;
-justify-self: flex-end;
-margin: 0 20px 0 0;
-}
-
-.header__theme-menu-list {
-  display: flex;
-  flex-direction: row;
-
-  list-style-type: none;
-margin: 0;
-
-}
-.header__theme-menu-item {
-  width: 70px;
-}
-}
-
-
-
-@media (width< 1024px){
-.decoration {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-padding: 0;
-margin: 20px 20px 0 0;
-gap: 5px;
-}
-}
-
-@media (375px <= width< 768px){
   .decoration {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-  padding: 0;
-  margin: 10px 12px 0 0;
-  gap: 5px;
-  }
+      display: flex;
+      flex-direction: row;
+      grid-area: 1 / 2 / 2 / 3;
+      justify-self: flex-end;
+      margin: 0 20px 0 0;
   }
 
+  .header__theme-menu-list {
+      display: flex;
+      flex-direction: row;
 
-.page.theme_dark .icon-text  {
+      list-style-type: none;
+      margin: 0;
+  }
+  .header__theme-menu-item {
+      width: 70px;
+  }
+}
+
+@media (width< 1024px) {
+  .decoration {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      padding: 0;
+      margin: 20px 20px 0 0;
+      gap: 5px;
+  }
+}
+
+@media (375px <= width< 768px) {
+  .decoration {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      padding: 0;
+      margin: 10px 12px 0 0;
+      gap: 5px;
+  }
+}
+
+.page.theme_dark .icon-text {
   display: inline-block;
-  color: #FF0070;
-margin: 0;
- text-align: end;
- padding: 0;
-
+  color: #ff0070;
+  margin: 0;
+  text-align: end;
+  padding: 0;
 }
 
 .page.theme_light .icon-text {
-display: none;
+  display: none;
 }
 
-.icon-top  {
+.icon-top {
   display: block;
   width: 25px;
   height: 25px;
   margin: 0;
   position: relative;
-  border-right: 1px solid #FF0070;
-  border-top: 1px solid #FF0070;
+  border-right: 1px solid #ff0070;
+  border-top: 1px solid #ff0070;
 }
 
 .page.theme_light .icon-top {
-
   border-right: 1px solid #353430;
   border-top: 1px solid #353430;
 }
 
-
-
-
 .page.theme_dark .icon-top::after {
-  content: ""; 
-  position: absolute; 
-  width: 9px; 
+  content: "";
+  position: absolute;
+  width: 9px;
   height: 9px;
-  top: 25%; 
-left: 25%;
-  border-radius: 50%; 
-  background-color: #FF0070; 
-  box-shadow: 0 0 4px 2px #FF0070;
+  top: 25%;
+  left: 25%;
+  border-radius: 50%;
+  background-color: #ff0070;
+  box-shadow: 0 0 4px 2px #ff0070;
 }
 
+@media (width <1024px) {
+  .header__theme-menu-list {
+      display: flex;
+      align-items: stretch;
+      flex-direction: column;
+      list-style-type: none;
+      text-align: end;
+      gap: 10px;
+      margin: 39px 10px 0 0;
 
-
-@media (width <1024px ) {
-.header__theme-menu-list {
-  display: flex;
-  align-items: stretch;
-  flex-direction: column;
-  list-style-type: none;
-  text-align: end; 
-gap: 10px;
-margin: 39px 10px 0 0;
-
-padding: 0;
-
-}
+      padding: 0;
+  }
 }
 
+@media (768px <= width <1024px) {
+  .header__theme-menu-list {
+      margin: 144px 20px 0 0;
+  }
+}
 
-.header__theme-menu-button{
-  
+.header__theme-menu-button {
   font-family: IBM Plex Mono, Arial, sans-serif;
   font-size: 18px;
   line-height: 18px;
-font-weight: 400;
-background-color: transparent;
-color: var(--navigagtion-text-color);
-border: none;
-text-transform: lowercase; 
-width: 3.9em;
+  font-weight: 400;
+  background-color: transparent;
+  color: var(--navigagtion-text-color);
+  border: none;
+  text-transform: lowercase;
+  width: 3.9em;
 }
 
 .header__theme-menu-button:hover {
@@ -190,51 +165,47 @@ width: 3.9em;
 
 .header__theme-menu-button:focus {
   outline: none;
-  }
+}
 
 .header__theme-menu-button:focus-visible {
-text-decoration: underline;
+  text-decoration: underline;
 }
 
 .header__theme-menu-item {
   color: var(--navigagtion-text-color);
 }
 
-
 .heading-tittle {
-color: var(--title-color);
-font-family: IBM Plex Mono, Arial, sans-serif; /*дописать*/
-font-weight: 700;
-line-height: 96px;
-text-align: left;
-text-shadow: 4px 4px 0 var(--accent-color);
-margin: 70px 0 55px 10px;
-padding: 0;
-
+  color: var(--title-color);
+  font-family: IBM Plex Mono, Arial, sans-serif; /*дописать*/
+  font-weight: 700;
+  line-height: 96px;
+  text-align: left;
+  text-shadow: 4px 4px 0 var(--accent-color);
+  margin: 70px 0 55px 10px;
+  padding: 0;
 }
 
-
 @media (375px <= width < 768px) {
-  .heading-tittle   {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  margin: 70px 0 55px 10px;
+  .heading-tittle {
+      font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+      margin: 70px 0 55px 10px;
   }
 }
 
 @media (768px <= width < 1024px) {
-  .heading-tittle   {
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  margin: 173px 0 162px 0;
+  .heading-tittle {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      margin: 174px 0 158px 0;
   }
 }
 
 @media (min-width: 1024px) {
-  .heading-tittle   {
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  margin: 300px 0 127px 0;
+  .heading-tittle {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      margin: 300px 0 127px 0;
   }
 }
-
 
 .introduction {
   display: inline-block;
@@ -243,17 +214,25 @@ padding: 0;
   font-family: IBM Plex Mono, Arial, sans-serif;
   font-weight: 700;
   line-height: 23.4px;
-  background-color: var( --accent-color);
-  color: var( --accent-text-color);
+  background-color: var(--accent-color);
+  color: var(--accent-text-color);
   justify-self: end;
-margin: 0 10px 0 0;
+  margin: 0 10px 0 0;
+}
+
+@media (768px <= width < 1024px) {
+  .introduction {
+    width: 355px;
+      height: fit-content;
+      margin: 0 20px 100px 0;
+  }
 }
 
 @media (min-width: 1024px) {
   .introduction {
-    width: 491px;
-  height: fit-content;
-  margin-right: 20px;
+      width: 491px;
+      height: fit-content;
+      margin-right: 20px;
   }
 }
 
@@ -262,42 +241,40 @@ margin: 0 10px 0 0;
   width: 25px;
   height: 25px;
   margin: 33px 0 0 10px;
-  border-left: 1px solid #FF0070;
-  border-bottom: 1px solid #FF0070;
+  border-left: 1px solid #ff0070;
+  border-bottom: 1px solid #ff0070;
 }
 
 @media (width >=768px) {
   .icon-bottom {
-    margin-left: 20px;
+      margin-left: 20px;
   }
 }
- 
+
 .page.theme_light .icon-bottom {
   border-left: 1px solid #353430;
   border-bottom: 1px solid #353430;
 }
-
 
 .subtitle {
   color: var(--subtitle-color);
   font-family: IBM Plex Mono, Arial, sans-serif;
   font-size: 18px;
   line-height: 23.4px;
-
 }
 
 .first-block .subtitle {
-margin: 48px 0 0px 0;
+  margin: 48px 0 0 0;
 }
 
-.second-block .subtitle { 
+
+.second-block .subtitle {
   margin: 52px 0 20px 0;
-  }
+}
 
-.third-block .subtitle { 
-    margin: 48px 0 20px 0;
-    }
-
+.third-block .subtitle {
+  margin: 48px 0 20px 0;
+}
 
 
 .item-heading {
@@ -316,93 +293,112 @@ margin: 48px 0 0px 0;
   font-weight: 700;
 }
 
-
 .main-text {
   color: var(--main-text-color);
-  margin: 0 ;
+  margin: 0;
   font-family: IBM Plex Mono, Arial, sans-serif;
   font-size: 18px;
   line-height: 23.4px;
-font-weight: 400;
+  font-weight: 400;
 }
 
 .main {
   margin: 0 10px 0 10px;
 }
 
-@media (375px <= width < 768px) {
-  .first-block   {
-    display: grid;
-    margin: 0;
+@media (width >= 768px) {
+  .main {
+    margin: 0 20px 0 20px;
   }
 }
 
-@media (768px <= width) {
-  .first-block   {
-display: grid;
-grid-template-columns: 1fr 2fr;
-/*grid-template-columns: auto auto;  Две колонки */
-grid-template-rows: auto auto ; /* Две строки */
-margin: 0;
-grid-column-gap: 20px;
+/*@media (375px <= width < 768px) {
+  .first-block {
+      display: grid;
+      margin: 0;
   }
-  
-  .first-block .subtitle   {
-    grid-row: span 4;
-    margin: 0px;
-      }
+} what for */
+
+@media (768px <= width < 1024px) {
+  .first-block {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      /*grid-template-columns: auto auto;  Две колонки */
+      grid-template-rows: auto auto; /* Две строки */
+
+      grid-column-gap: 20px;
+      margin: 80px 0 0 0;
+  }
+
+  .first-block .subtitle {
+    grid-column: 1; 
+      margin: 0;
+  }
+
+  .first-block .item-heading  {
+    margin: 20px;
+  }
+
+  .first-block .item-heading,
+  .first-block .main-text {
+    grid-column: 2; 
+  height: fit-content;
+  margin: 0;
+  }
+
+.second-block {
+  margin-block-start: 80px;
 }
 
-
-
-
-
+.second-block .subtitle {
+max-width: 236px;
+}
+}
 
 /*@media ( width < 1024px) {
-  .second-block   {
+.second-block   {
 display: grid;
 margin: 40px 0 0 0;
-  }
-  
-  .second-block .subtitle   {
-   margin: 10 0 0px 0;
-      }
-} сейчас добавила*/ 
-
-@media (width > 1024px) {
-  .second-block   {
-display: grid;
-grid-auto-flow: column; 
-column-gap: 20px;
-grid-template-columns: 1fr 1fr 1fr;
-grid-template-rows: auto auto auto;
-margin: 60px 0 0 0;
-  }
-  
-  .second-block .subtitle   {
-   margin: 0 0 20px 0;
-   grid-column: 1 / span 3;
-max-width: 33%;
-      }
 }
 
-.third-block   {
-  margin: 25px 0 0 0;
+.second-block .subtitle   {
+ margin: 10 0 0px 0;
     }
+} сейчас добавила*/
 
+@media (width > 1024px) {
+  .second-block {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 20px;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: auto auto auto;
+      margin: 60px 0 0 0;
+  }
+
+  .second-block .subtitle {
+      margin: 0 0 20px 0;
+      grid-column: 1 / span 3;
+      max-width: 33%;
+  }
+}
+
+.third-block {
+  margin: 25px 0 0 0;
+}
 
 @media (768px <= width) {
-.third-block   {
-display: grid;
-grid-template-columns: 1fr 2fr;
-margin: 60px 0 0 0;
-grid-column-gap: 20px;
+  .third-block {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      margin: 60px 0 0 0;
+      grid-column-gap: 20px;
   }
-  
-  .third-block .subtitle   {
-    grid-row: span 11;
-    margin: 0;
-      }
+
+  .third-block .subtitle {
+      grid-row: span 11;
+      margin: 0;
+  }
 }
 
 .last-item-heading {
@@ -411,16 +407,12 @@ grid-column-gap: 20px;
   font-size: 18px;
 }
 
-
-
-
-
 .section__image {
   width: 100%;
   object-fit: cover;
   object-position: center;
-
-
+  min-width: 100%;
+  min-height: 100%; 
 }
 
 .item-heading-pictures {
@@ -433,54 +425,50 @@ grid-column-gap: 20px;
   margin: 50px 0 10px 0;
 }
 
-
 .pictures {
   display: grid;
   margin: 10px 0 0 0;
   gap: 10px;
+
 }
 
-
-
-@media (width > 768px) {
+@media (width >= 768px) {
   .pictures {
-    display: grid;
-    gap: 10px; /* Отступ между ячейками */
-  margin: 20px 0 0 0;
-    object-fit: cover;
-    grid-template-areas:
-    "sunset sunset ice-cream"
-    "tape books ice-cream"
-    "tape street street";
+      display: grid;
+      gap: 20px; /* Отступ между ячейками */
+      margin: 20px 0 0 0;
+      object-fit: cover;
+      grid-template-areas:
+          "sunset sunset ice-cream"
+          "tape books ice-cream"
+          "tape street street";
   }
 
   .sunset {
-    grid-area: sunset;
-  
+      grid-area: sunset;
   }
 
   .ice-cream {
-    grid-area: ice-cream;
+      grid-area: ice-cream;
   }
-  
+
   .tape {
-    grid-area: tape ;
+      grid-area: tape;
   }
-  
+
   .books {
-    grid-area: books;
+      grid-area: books;
   }
 
   .street {
-    grid-area: street;
+      grid-area: street;
   }
-
 }
 
 .footer {
   display: flex;
   width: 100%;
-min-height: 668px;
+  min-height: 668px;
   flex-direction: column;
   margin: 40px 0 0 0;
   justify-content: space-between;
@@ -488,64 +476,63 @@ min-height: 668px;
 
 @media (768px <= width < 1024px) {
   .footer {
-    min-height: 1024px;
+      min-height: 1024px;
   }
 }
 
 @media (width >= 1024px) {
   .footer {
-    min-height: 768px;
-   
+      min-height: 768px;
   }
 }
 
-.footer-icon-top  {
+.footer-icon-top {
   display: block;
   width: 25px;
   height: 25px;
- 
-  border-right: 1px solid #FF0070;
-  border-top: 1px solid #FF0070;
-  margin: 0 10px 0 auto; 
+
+  border-right: 1px solid #ff0070;
+  border-top: 1px solid #ff0070;
+  margin: 10px 10px 0 auto;
 }
 
 .footer-icon-bottom {
   display: block;
   width: 25px;
   height: 25px;
-margin: 0 0 10px 10px;
+  margin: 0 0 10px 10px;
 
-  border-left: 1px solid #FF0070;
-  border-bottom: 1px solid #FF0070;
+  border-left: 1px solid #ff0070;
+  border-bottom: 1px solid #ff0070;
 }
- 
+
 .footer-title {
-color: var(--title-color);
-font-family: IBM Plex Mono, Arial, sans-serif; /*дописать*/
-font-weight: 700;
-line-height: 96px;
-text-shadow: 4px 4px 0 var(--accent-color);
-width: 100%;
-text-align: center;
+  color: var(--title-color);
+  font-family: IBM Plex Mono, Arial, sans-serif; /*дописать*/
+  font-weight: 700;
+  line-height: 96px;
+  text-shadow: 4px 4px 0 var(--accent-color);
+  width: 100%;
+  text-align: center;
 }
 
 @media (375px <= width < 768px) {
-  .footer-title  {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  margin: 70px 0 55px 10px;
+  .footer-title {
+      font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+      margin: 70px 0 55px 10px;
   }
 }
 
 @media (768px <= width < 1024px) {
-  .footer-title  {
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  margin: 173px 0 162px 0;
+  .footer-title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      margin: 173px 0 162px 0;
   }
 }
 
 @media (min-width: 1024px) {
-  .footer-title  {
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  margin: 273px 0 130px 0;
+  .footer-title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      margin: 273px 0 130px 0;
   }
 }
