--- a/styles/style.css
+++ b/styles/style.css
@@ -312,61 +312,67 @@ html {
   }
 }
 
-/*@media (375px <= width < 768px) {
+@media (width >= 768px) { 
   .first-block {
-      display: grid;
-      margin: 0;
-  }
-} what for */
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    /*grid-template-columns: auto auto;  Две колонки */
+    grid-template-rows: auto auto; /* Две строки */
 
-@media (768px <= width < 1024px) {
-  .first-block {
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      /*grid-template-columns: auto auto;  Две колонки */
-      grid-template-rows: auto auto; /* Две строки */
-
-      grid-column-gap: 20px;
-      margin: 80px 0 0 0;
-  }
-
-  .first-block .subtitle {
-    grid-column: 1; 
-      margin: 0;
-  }
-
-  .first-block .item-heading  {
-    margin: 20px;
-  }
-
-  .first-block .item-heading,
-  .first-block .main-text {
-    grid-column: 2; 
-  height: fit-content;
-  margin: 0;
-  }
-
-.second-block {
-  margin-block-start: 80px;
+    grid-column-gap: 20px;
+    margin: 80px 0 0 0;
 }
 
+.first-block .subtitle {
+  grid-column: 1; 
+    margin: 0;
+}
+
+.first-block .item-heading  {
+  margin: 20px;
+}
+
+.first-block .item-heading,
+.first-block .main-text {
+  grid-column: 2; 
+height: fit-content;
+margin: 0;
+}
+
+.first-heading, .first-text {
+  grid-area: 1;
+
+}
+.first-heading {
+  margin-top: 0;
+}
+.first-text {
+  padding: 32px 0 13px 0;
+  
+}
+
+.first-block .item-heading {
+  margin:0 0 8px 0;
+}
+
+}
+
+@media (768px <= width < 1024px) {
+.second-block {
+  margin-block-start: 65px;
+}
 .second-block .subtitle {
 max-width: 236px;
 }
+
+.item-heading {
+  margin: 10px 0 20px 0;
+}
 }
 
-/*@media ( width < 1024px) {
-.second-block   {
-display: grid;
-margin: 40px 0 0 0;
-}
 
-.second-block .subtitle   {
- margin: 10 0 0px 0;
-    }
-} сейчас добавила*/
 
-@media (width > 1024px) {
+@media (width >= 1024px) {
   .second-block {
       display: grid;
       grid-auto-flow: column;
