--- a/styles/light.css
+++ b/styles/light.css
@@ -7,7 +7,8 @@
   --accent-text-color:#353430;
   --subtitle-color:#353430;
   --main-text-color: #353430;
-  --page-image: url("../images/cover-image-light.png")
+  --page-image: url("../images/cover-image-light.png");
+  --hyperlink-outline: #353430;
 }
 
 @media (prefers-color-scheme: light) {
@@ -20,8 +21,8 @@
     --accent-text-color:#353430;
     --subtitle-color:#353430;
     --main-text-color: #353430;  
-    --page-image: url("../images/cover-image-light.png")
-  
+    --page-image: url("../images/cover-image-light.png");
+    --hyperlink-outline: #353430;
     }
 }
 
@@ -32,4 +33,4 @@
 
 .header__theme-menu-button_type_light :hover {
   outline: 1px solid #353430;
-}
+}  /* что это?*/
