--- a/styles/style.css
+++ b/styles/style.css
@@ -20,13 +20,13 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /*background-attachment: fixed;*/
+  background-attachment: fixed;
   height: 100vh;
 }
 
 .hyperlink {
   text-decoration: none;
-  text-shadow: 2px 2px 0 #FF0070;
+  text-shadow: 2px 2px 0 #ff0070;
 }
 
 .hyperlink:hover {
@@ -39,14 +39,12 @@ html {
 
 .hyperlink:focus-visible {
   outline: 1px solid var(--hyperlink-outline);
- 
 }
-
 
 .header {
   display: grid;
   justify-self: space-between;
-
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -192,8 +190,7 @@ html {
   text-decoration: underline;
 }
 
-
-.header__theme-menu-button_active {   
+.header__theme-menu-button_active {
   pointer-events: none;
 }
 
@@ -248,7 +245,7 @@ html {
 
 @media (768px <= width < 1024px) {
   .introduction {
-    width: 355px;
+      width: 355px;
       height: fit-content;
       margin: 0 20px 100px 0;
   }
@@ -293,7 +290,6 @@ html {
   margin: 48px 0 0 0;
 }
 
-
 .second-block .subtitle {
   margin: 52px 0 20px 0;
 }
@@ -301,7 +297,6 @@ html {
 .third-block .subtitle {
   margin: 48px 0 20px 0;
 }
-
 
 .item-heading {
   background-color: var(--accent-color);
@@ -328,75 +323,71 @@ html {
   font-weight: 400;
 }
 
-.main {
+main {
   margin: 0 10px 0 10px;
 }
 
 @media (width >= 768px) {
   .main {
-    margin: 0 20px 0 20px;
+      margin: 0 20px 0 20px;
   }
 }
 
-@media (width >= 768px) { 
+@media (width >= 768px) {
   .first-block {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    /*grid-template-columns: auto auto;  Две колонки */
-    grid-template-rows: auto auto; /* Две строки */
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      /*grid-template-columns: auto auto;  Две колонки */
+      grid-template-rows: auto auto; /* Две строки */
 
-    grid-column-gap: 20px;
-    margin: 80px 0 0 0;
-}
+      grid-column-gap: 20px;
+      margin: 80px 0 0 0;
+  }
 
-.first-block .subtitle {
-  grid-column: 1; 
-    margin: 0;
-}
+  .first-block .subtitle {
+      grid-column: 1;
+      margin: 0;
+  }
 
-.first-block .item-heading  {
-  margin: 20px;
-}
+  .first-block .item-heading {
+      margin: 20px;
+  }
 
-.first-block .item-heading,
-.first-block .main-text {
-  grid-column: 2; 
-height: fit-content;
-margin: 0;
-}
+  .first-block .item-heading,
+  .first-block .main-text {
+      grid-column: 2;
+      height: fit-content;
+      margin: 0;
+  }
 
-.first-heading, .first-text {
-  grid-area: 1;
+  .first-heading,
+  .first-text {
+      grid-area: 1;
+  }
+  .first-heading {
+      margin-top: 0;
+  }
+  .first-text {
+      padding: 32px 0 13px 0;
+  }
 
-}
-.first-heading {
-  margin-top: 0;
-}
-.first-text {
-  padding: 32px 0 13px 0;
-  
-}
-
-.first-block .item-heading {
-  margin:0 0 8px 0;
-}
-
+  .first-block .item-heading {
+      margin: 0 0 8px 0;
+  }
 }
 
 @media (768px <= width < 1024px) {
-.second-block {
-  margin-block-start: 65px;
-}
-.second-block .subtitle {
-max-width: 236px;
-}
+  .second-block {
+      margin-block-start: 65px;
+  }
+  .second-block .subtitle {
+      max-width: 236px;
+  }
 
-.item-heading {
-  margin: 10px 0 20px 0;
+  .item-heading {
+      margin: 10px 0 20px 0;
+  }
 }
-}
-
-
 
 @media (width >= 1024px) {
   .second-block {
@@ -444,7 +435,7 @@ max-width: 236px;
   object-fit: cover;
   object-position: center;
   min-width: 100%;
-  min-height: 100%; 
+  min-height: 100%;
 }
 
 .item-heading-pictures {
@@ -461,7 +452,6 @@ max-width: 236px;
   display: grid;
   margin: 10px 0 0 0;
   gap: 10px;
-
 }
 
 @media (width >= 768px) {
