--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ html {
 .header {
   display: grid;
   justify-self: space-between;
-  /*height: 100vh;*/
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -202,7 +202,7 @@ html {
   font-weight: 700;
   line-height: 96px;
   text-align: left;
-  text-shadow: 4px 4px 0 var(--accent-color);
+  text-shadow: 4px 4px 0 #FF0070;
   margin: 70px 0 55px 10px;
   padding: 0;
 }
@@ -224,7 +224,7 @@ html {
 @media (min-width: 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 305px 0 127px 0;
+      margin: 300px 0 127px 0;
   }
 }
 
@@ -245,7 +245,7 @@ html {
   .introduction {
       width: 364px;
       height: fit-content;
-      margin: 0 20px 115px 0;
+      margin: 0 20px 126px 0;
   }
 }
 
@@ -253,7 +253,7 @@ html {
   .introduction {
       width: 491px;
       height: fit-content;
-      margin-right: 20px;
+      margin: 0 20px 60px 0;
   }
 }
 
@@ -333,7 +333,7 @@ main {
 }
 
 @media (width >= 768px) {
-  .main {
+  main {
       margin: 0 20px 0 20px;
   }
 }
