--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ html {
 @media (min-width: 1024px) {
   .header__theme-menu {
       display: grid;
-      grid-template-columns: auto 26px;
+      grid-template-columns: auto 10px;
       align-items: center;
       margin-block-start: 20px;
   }
@@ -224,7 +224,7 @@ html {
 @media (min-width: 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 300px 0 120px 0;
+      margin: 290px 0 130px 0;
   }
 }
 
@@ -245,7 +245,7 @@ html {
   .introduction {
       width: 364px;
       height: fit-content;
-      margin: 0 20px 126px 0;
+      margin: 0 20px 100px 0;
   }
 }
 
@@ -316,7 +316,7 @@ html {
   background-color: var(--accent-color);
   color: var(--accent-text-color);
   font-weight: 700;
-  margin: 0 0 20px 0;
+  margin: 0;
 }
 
 .main-text {
@@ -341,16 +341,15 @@ main {
 @media (width >= 768px) {
   .first-block {
       display: grid;
-      grid-template-columns: minmax(236px, 315px) 2fr;
-      /*grid-template-columns: auto auto;  Две колонки */
-      grid-template-rows: auto auto; /* Две строки */
-
+      grid-template-columns: auto auto; 
+      grid-template-rows: auto auto; 
       grid-column-gap: 20px;
       margin: 80px 0 0 0;
   }
 
   .first-block .subtitle {
       grid-column: 1;
+      width: 236px;
       margin: 0;
    
   }
@@ -382,18 +381,24 @@ main {
   .first-block .subtitle {
     width: 315px;
 }
+
+.first-text {
+padding-top: 32px;
+padding-bottom: 20px;
+}
+
 }
 
 @media (768px <= width < 1024px) {
   .second-block {
-      margin-block-start: 65px;
+      margin-block-start: 70px;
   }
   .second-block .subtitle {
       max-width: 236px;
   }
 
-  .item-heading {
-      margin: 10px 0 20px 0;
+  .second-block .item-heading {
+      margin: 10px 0 10px 0;
   }
 }
 
@@ -408,7 +413,7 @@ main {
   }
 
   .second-block .subtitle {
-      margin:0;
+      margin: 10px 0 0 0;
       grid-column: 1 / span 3;
       max-width: 33%;
   }
@@ -429,7 +434,7 @@ line-height: 23.4px;
   .third-block {
       display: grid;
       grid-template-columns: 1fr 2fr;
-      margin: 60px 0 0 0;
+      margin: 77px 0 0 0;
       grid-column-gap: 20px;
   }
 
@@ -437,6 +442,14 @@ line-height: 23.4px;
       grid-row: span 11;
       margin: 0;
   }
+  .third-block .item-heading {
+    margin: 20px 0 10px 0;
+  }
+
+  .third-block .main-text {
+    width: 650px;
+  }
+
 }
 
 @media (width >= 1024px) {
@@ -470,6 +483,11 @@ line-height: 23.4px;
 }
 
 @media (width >= 768px) {
+
+  .item-heading-pictures {
+    margin: 75px 0 10px 0;
+  } 
+
   .pictures {
       display: grid;
       gap: 20px; /* Отступ между ячейками */
