--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,10 @@ html {
 .page.theme_light .icon-text {
   display: none;
 }
+.page.theme_auto .icon-text {
+  display: none;
+}
+
 
 .icon-top {
   display: block;
@@ -202,7 +206,7 @@ html {
   font-weight: 700;
   line-height: 96px;
   text-align: left;
-  text-shadow: 4px 4px 0 #FF0070;
+  text-shadow: 4px 4px 0 var(--accent-color);
   margin: 70px 0 55px 10px;
   padding: 0;
 }
@@ -222,9 +226,18 @@ html {
 }
 
 @media (min-width: 1024px) {
+  .page.theme_light .heading-tittle {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      margin: 293px 0 130px 0;
+      text-shadow: 4px 4px 0 #FF0070;
+  }
+}
+
+@media (min-width: 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
       margin: 293px 0 130px 0;
+
   }
 }
 
@@ -450,14 +463,20 @@ line-height: 23.4px;
   }
 
   .third-block .main-text {
-    width: 650px;
+    width: 472px;
   }
 
 }
 
+
+
 @media (width >= 1024px) {
   .third-block {
     margin-block-start: 75px;
+  }
+
+  .third-block .main-text {
+    width: 650px;
   }
 }
 
@@ -493,7 +512,7 @@ line-height: 23.4px;
 
   .pictures {
       display: grid;
-      gap: 20px; /* Отступ между ячейками */
+      gap: 20px; 
       margin: 20px 0 0 0;
       object-fit: cover;
       grid-template-areas:
@@ -523,17 +542,7 @@ line-height: 23.4px;
   }
 }
 
-@media (width < 768px) {
-  .pictures {
-    grid-template-areas:
-      "sunset"
-      "ice-cream"
-      "tape"
-      "books"
-      "street";
-    grid-template-columns: 1fr;
-  }
-}
+
 
 .footer {
   display: flex;
