--- a/styles/style.css
+++ b/styles/style.css
@@ -163,7 +163,8 @@ html {
 
 @media (768px <= width <1024px) {
   .header__theme-menu-list {
-      margin: 144px 20px 0 0;
+      margin: 145px 20px 0 0;
+      gap: 14px;
   }
 }
 
@@ -221,7 +222,7 @@ html {
 @media (768px <= width < 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 190px 0 160px 0;
+      margin: 180px 0 160px 0;
   }
 }
 
@@ -258,7 +259,7 @@ html {
   .introduction {
       width: 364px;
       height: fit-content;
-      margin: 0 20px 100px 0;
+      margin: 0 20px 108px 0;
   }
 }
 
@@ -382,7 +383,7 @@ main {
       margin-top: 0;
   }
   .first-text {
-      padding: 32px 0 13px 0;
+      padding: 32px 0 20px 0;
   }
 
   .first-block .item-heading {
@@ -407,14 +408,14 @@ padding-bottom: 20px;
 
 @media (768px <= width < 1024px) {
   .second-block {
-      margin-block-start: 70px;
+      margin-block-start: 82px;
   }
   .second-block .subtitle {
       max-width: 236px;
   }
 
   .second-block .item-heading {
-      margin: 10px 0 10px 0;
+      margin: 16px 0 14px 0;
   }
 }
 
@@ -425,7 +426,7 @@ padding-bottom: 20px;
       column-gap: 20px;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: auto auto auto;
-      margin: 75px 0 0 0;
+      margin: 70px 0 0 0;
   }
 
   .second-block .subtitle {
@@ -459,7 +460,7 @@ line-height: 23.4px;
       margin: 0;
   }
   .third-block .item-heading {
-    margin: 20px 0 10px 0;
+    margin: 20px 0 12px 0;
   }
 
   .third-block .main-text {
@@ -472,11 +473,15 @@ line-height: 23.4px;
 
 @media (width >= 1024px) {
   .third-block {
-    margin-block-start: 75px;
+    margin-block-start: 78px;
   }
 
   .third-block .main-text {
     width: 650px;
+  }
+
+  .third-block .item-heading {
+    margin: 20px 0 10px 0;
   }
 }
 
@@ -555,6 +560,7 @@ line-height: 23.4px;
 
 @media (768px <= width < 1024px) {
   .footer {
+    margin: 73px 0 0 0;
       min-height: 1024px;
   }
 }
@@ -606,13 +612,13 @@ line-height: 23.4px;
 @media (768px <= width < 1024px) {
   .footer-title {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 173px 0 162px 0;
+      margin: 155px 0 162px 0;
   }
 }
 
 @media (min-width: 1024px) {
   .footer-title {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 273px 0 130px 0;
+      margin: 175px 0 130px 0;
   }
 }
