--- a/styles/style.css
+++ b/styles/style.css
@@ -508,9 +508,11 @@ line-height: 23.4px;
 
 .pictures {
   display: grid;
+  grid-template-rows: repeat(5, auto);
+
   margin: 10px 0 0 0;
   gap: 10px;
-height: fit-content;
+
 }
 
 @media (width >= 768px) {
