--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ html {
   height: 100vh;
 }
 
-.hyperlink {
+/*.hyperlink {
   text-decoration: none;
   text-shadow: 2px 2px 0 var(--accent-color);
 }
@@ -39,7 +39,7 @@ html {
 
 .hyperlink:focus-visible {
   outline: 1px solid var(--hyperlink-outline);
-}
+}*/
 
 .header {
   display: grid;
