--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ html {
 .header {
   display: grid;
   justify-self: space-between;
-  /*height: 100vh;*/
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -347,7 +347,7 @@ main {
 
 @media (width >= 768px) {
   main {
-      margin: 0 20px 0 20px;
+      margin: 345px 20px 0 20px;
   }
 }
 
