--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ html {
 .header {
   display: grid;
   justify-self: space-between;
- /* height: 100vh;*/
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
