--- a/styles/style.css
+++ b/styles/style.css
@@ -246,7 +246,7 @@ html {
   background-color: var(--accent-color);
   color: var(--accent-text-color);
   justify-self: end;
-  margin: 0 10px 0 0;
+  margin: 0 10px 5px 0;
 }
 
 @media (768px <= width < 1024px) {
@@ -603,7 +603,7 @@ line-height: 23.4px;
 @media (375px <= width < 768px) {
   .footer-title {
       font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-      margin: 70px 0 55px 0;
+      margin: 50px 0 55px 0;
   }
 }
 
