--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,6 +9,7 @@
   --main-text-color: #f1b2ce;
   --page-image: url("../images/cover-image-dark.png");
   --hyperlink-outline: #f1b2ce;
+--decoration-color: #ff0070;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,6 +23,7 @@
       --subtitle-color: #ff0070;
       --main-text-color: #f1b2ce;
       --hyperlink-outline: #f1b2ce;
+      --decoration-color: #ff0070;
   }
 }
 
@@ -34,6 +36,40 @@
   --accent-text-color: #000028;
   --subtitle-color: #ff0070;
   --main-text-color: #f1b2ce;
-
+  --decoration-color: #ff0070;
   --page-image: url("../images/cover-image-dark.png");
 }
+
+.page.theme_dark .icon-text {
+  color: var(--navigagtion-text-color);
+  margin: 10px 35px 0 0;
+  text-align: end;
+  vertical-align: center;
+  grid-row-start: 1;
+  position: relative;
+  }
+
+  @media (width >= 678px) {
+    .page.theme_dark .icon-text {
+    width: fit-content;
+    }
+  }
+
+  .page.theme_dark .icon-text::after {
+content: "";
+position: absolute;
+width: 9px;
+height: 9px;
+border-radius: 50%;
+background-color: #ff0070;
+box-shadow: 0 0 4px 2px #ff0070;
+margin-left: 5px;
+top: 30%;
+
+
+}
+
+.page.theme_dark .header__theme-menu {
+  grid-row-start: 2;
+}
+
