--- a/styles/light.css
+++ b/styles/light.css
@@ -9,6 +9,7 @@
   --main-text-color: #353430;
   --page-image: url("../images/cover-image-light.png");
   --hyperlink-outline: #353430;
+  --decoration-color: #353430;
 }
 
 @media (prefers-color-scheme: light) {
@@ -23,6 +24,7 @@
       --main-text-color: #353430;
       --page-image: url("../images/cover-image-light.png");
       --hyperlink-outline: #353430;
+      --decoration-color: #353430;
   }
 }
 
@@ -32,4 +34,8 @@
 
 .header__theme-menu-button_type_light :hover {
   outline: 1px solid #353430;
+}
+
+.page.theme_light .icon-text {
+  display: none;
 }
