--- a/styles/style.css
+++ b/styles/style.css
@@ -112,20 +112,18 @@ margin-left: 10px;
 
 .icon-text {
   grid-column: 1 / span 2; 
+  grid-row: 1 / span 2; 
 
 }
 
 }
 
-grid-column: 1 / span 2; 
 
 @media (min-width: 1024px) {
+
   .header__theme-menu {
-      display: grid;
-     width: 100%;
-      align-items: center;
-      margin: 20px 0 0 20px;
-    
+    width: 100%;
+    justify-content: center ;
   }
 
   .header__theme-menu-list {
@@ -133,16 +131,12 @@ grid-column: 1 / span 2;
       flex-direction: row;
       list-style-type: none;
       margin: 0;
-      grid-area: 1 / 1 / 2 / 2;
+      width: 100%;
       text-align: center;
-      min-width: 230px;
       justify-content: center;
-      gap: 10px;
+      min-width: 230px;
   }
 
-  .header__theme-menu-item {
-      width: 70px;
-  }
 }
 
 
@@ -267,6 +261,7 @@ grid-column: 1 / span 2;
         width: 491px;
         height: fit-content;
         margin: 0 20px 65px 0;
+        grid-row-start: 4;
     }
 }
 
