--- a/styles/dark.css
+++ b/styles/dark.css
@@ -41,36 +41,10 @@
 }
 
 .page.theme_dark .icon-text {
-  color: var(--navigagtion-text-color);
-  margin: 10px 35px 0 0;
-  text-align: end;
-  vertical-align: center;
-  grid-row-start: 1;
-  position: relative;
+display: inline-block;
   }
-
-  @media (width >= 768px) {
-    .page.theme_dark .icon-text {
-      margin: 20px 42px 0 0;
-     width: fit-content;
-     justify-self: end;
-    }
-  }
-
-  .page.theme_dark .icon-text::after {
-content: "";
-position: absolute;
-width: 9px;
-height: 9px;
-border-radius: 50%;
-background-color: #ff0070;
-box-shadow: 0 0 4px 2px #ff0070;
-margin-left: 5px;
-top: 30%;
-
-}
 
 .page.theme_dark .header__theme-menu {
-  grid-row-start: 2;
+  grid-row-start: 1;
 }
 
