--- a/styles/style.css
+++ b/styles/style.css
@@ -26,12 +26,14 @@ html {
 }
 
 .hyperlink {
+  display: inline-block;
     text-decoration: none;
     text-shadow: 2px 2px 0 var(--accent-color);
+    line-height: 18px;
 }
 
 .hyperlink:hover {
-    text-decoration: underline;
+   border-bottom: 1px solid var( --main-text-color);
 }
 
 .hyperlink:focus {
@@ -44,22 +46,21 @@ html {
 
 .header {
     display: grid;
-    grid-template-rows: auto auto auto auto; 
+    grid-template-columns: 1fr; 
+    grid-template-rows:  1fr min-content 1fr;
 width: 100%;
-
     height: 100vh;
     margin: 0 20px 0 0;
     padding: 0;
 }
 
 
-@media (width >= 1024px) {
+@media (min-width: 1024px) {
   .header {
-    grid-template-columns: auto 45px;
+    min-height: 768px;
+    height: 100vh;
   }
 }
-
-
 
 .decorated-zone {
   position: relative;
@@ -76,6 +77,7 @@ height: auto;
  height: 25px;
 justify-self: end;
 margin: 10px 10px 0 0;
+grid-row: 1;
 }
 
 
@@ -89,14 +91,16 @@ margin: 10px 10px 0 0;
  height: 25px;
 justify-self: start;
 align-self: end;
+margin-top: 20px;
 margin-left: 10px;
+grid-row: 3;
 }
 
 
 @media (width >= 768px) {
   .decorated-zone::before  {
-    margin-left: 0px;
-    grid-row: 1;
+    margin-left: 20px;
+  
 }
 
 .decorated-zone::after {
@@ -105,18 +109,58 @@ margin-left: 10px;
 
 }
 
-@media (width >= 768px) {
-.header__theme-menu {
-  grid-column: 1 / span 2; 
-}
 
 .icon-text {
-  grid-column: 1 / span 2; 
-  grid-row: 1 / span 2; 
+  
+  color: var(--navigagtion-text-color);
+  margin: 10px 35px 0 0;
+  text-align: end;
+  height: fit-content;
+  vertical-align: center;
+  grid-row-start: 1;
+  grid-column: 1;
+  position: relative;
+text-transform: uppercase;
+}
+
+.icon-text::after {
+content: "";
+position: absolute;
+width: 9px;
+height: 9px;
+border-radius: 50%;
+background-color: #ff0070;
+box-shadow: 0 0 4px 2px #ff0070;
+margin-left: 7px;
+top: 9px;
 
 }
 
+@media (width >= 768px) {
+ .icon-text {
+    margin: 20px 42px 0 0;
+   width: fit-content;
+   height: fit-content;
+   justify-self: end;
+  
+  }
 }
+
+
+.header__theme-menu {
+  grid-row: 1;
+  grid-column: 1;
+
+margin-top: 30px;
+}
+
+@media (width >= 768px) {
+.header__theme-menu {
+ 
+  margin-block-start: 20px;
+}
+}
+
 
 
 @media (min-width: 1024px) {
@@ -126,7 +170,7 @@ margin-left: 10px;
     justify-content: center ;
   }
 
-  .header__theme-menu-list {
+  .header__theme-menu-list {  /*вынести эти правила*/
       display: flex;
       flex-direction: row;
       list-style-type: none;
@@ -185,7 +229,7 @@ margin-left: 10px;
 }
 
 .header__theme-menu-button:focus-visible {
-    text-decoration: underline;
+  border-bottom: 1px solid var(--decoration-color);
 }
 
 .header__theme-menu-button_active {
@@ -205,21 +249,20 @@ margin-left: 10px;
     text-align: left;
     text-shadow: 4px 4px 0 var(--accent-color);
     padding: 0;
+    grid-row: 2;
    
 }
 
 @media (375px <= width < 768px) {
     .heading-tittle {
         font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-        margin: 60px 0 55px 10px;
     }
 }
 
 @media (768px <= width < 1024px) {
     .heading-tittle {
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-        margin: 175px 0 160px 0;
-        grid-column: 1 / span 2;
+
     }
 }
 
@@ -230,7 +273,6 @@ margin-left: 10px;
 
     .heading-tittle {
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-        margin: 293px 0 120px 0;
     }
 }
 
@@ -243,48 +285,26 @@ margin-left: 10px;
     line-height: 23.4px;
     background-color: var(--accent-color);
     color: var(--accent-text-color);
-    justify-self: end;
-    margin: 0;
+justify-self: end;
+align-self: center;
+    margin-right: 10px;
+    grid-row: 3;
   
 }
 
-@media (768px <= width < 1024px) {
+@media (min-width: 768px) {
     .introduction {
         width: 364px;
-        height: fit-content;
-        margin: 0 20px 115px 0;
+        margin-right: 20px;
     }
 }
 
 @media (min-width: 1024px) {
     .introduction {
-        width: 491px;
-        height: fit-content;
-        margin: 0 20px 65px 0;
-        grid-row-start: 4;
+        width: 491px
     }
 }
 
-.icon-bottom {
-    display: block;
-    width: 25px;
-    height: 25px;
-    margin: 0 0 0 10px;
-    border-left: 1px solid #ff0070;
-    border-bottom: 1px solid #ff0070;
-}
-
-@media (width >= 768px) {
-    .icon-bottom {
-        margin-left: 20px;
-    }
-}
-
-
-.page.theme_light .icon-bottom {
-    border-left: 1px solid #353430;
-    border-bottom: 1px solid #353430;
-}
 
 .subtitle {
     color: var(--subtitle-color);
@@ -545,6 +565,7 @@ main {
  
 .footer .decorated-zone::after {
   align-self: start;
+ 
 }
 
 
